manifests/networkPolicies/guestbook/NP-guestbook-ns.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: guestbook-ns
  namespace: guestbook
spec:
  selector: all()  # default
  types:
    - Ingress
    - Egress
  ingress:
    - action: Log
    - action: Allow
      source:
        namespaceSelector: projectcalico.org/name == "guestbook"
      destination:
        namespaceSelector: projectcalico.org/name == "guestbook"
    - action: Allow
      source:
        namespaceSelector: projectcalico.org/name == "istio-system"
        selector: app == "istiod"
  egress:
    - action: Log
    - action: Allow
      source:
        namespaceSelector: projectcalico.org/name == "guestbook"
      destination:
        namespaceSelector: projectcalico.org/name == "guestbook"
    - action: Allow
      destination:
        namespaceSelector: projectcalico.org/name == "istio-system"
        selector: app == "istiod"
