manifests/networkPolicies/guestbook/NP-guestbook-to-yaobank.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: guestbook-to-yaobank
  namespace: guestbook
spec:
  selector: app == "ubuntu" || app == "debug"
  types:
    - Ingress
    - Egress
  ingress:
    - action: Log

    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == "yaobank"
        selector: app == "customer"
      http:
        methods:
          - GET
        paths:
          - prefix: "/"

  egress:
    - action: Log

    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == "yaobank"
        selector: app == "customer"
